--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,8 @@
         android:id="@+id/add_manufacturer"
         android:title="@string/add_manufacturer"
         android:icon="@drawable/ic_add" />
+    <item
+        android:id="@+id/show_summary"
+        android:title="@string/summary"
+        android:icon="@drawable/ic_add" />
 </menu>
