--- a/app/src/main/res/layout/dialog_summary.xml
+++ b/app/src/main/res/layout/dialog_summary.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
+        android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,43 +17,60 @@
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_margin="16dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:textSize="18sp"
-            android:text="@string/purchase_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="18sp"
-            android:layout_marginLeft="36dp"
-            android:id="@+id/purchaseSummary"
+        <LinearLayout
+            android:layout_margin="16dp"
+            android:layout_marginLeft="32dp"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp" />
-    </LinearLayout>
+            android:layout_marginStart="32dp">
 
-    <LinearLayout
-        android:layout_margin="16dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:text="@string/purchase_price"
+                android:textSize="24sp" />
 
-        <TextView
-            android:textSize="18sp"
-            android:text="@string/selling_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="18sp"
-            android:layout_marginLeft="36dp"
-            android:id="@+id/sellingSummary"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/purchaseSummary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginStart="24dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_margin="16dp"
+            android:layout_marginLeft="32dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp" />
+            android:layout_marginStart="32dp">
+
+            <TextView
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:text="@string/selling_price"
+                android:textSize="24sp" />
+
+            <TextView
+                android:id="@+id/sellingSummary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginStart="24dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
