--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -22,6 +22,7 @@
 
     <!-- Weight on store -->
     <LinearLayout
+        android:layout_marginLeft="32dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -87,15 +88,18 @@
 
     <!-- Purchase Price -->
     <LinearLayout
+        android:layout_marginStart="64dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="64dp">
 
         <EditText
             android:id="@+id/edtPurchasePrice"
-            android:inputType="number"
             android:layout_width="80dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Selling Price -->
@@ -106,41 +110,49 @@
 
         <EditText
             android:id="@+id/edtSellingPrice"
-            android:inputType="number"
             android:layout_width="80dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Purchase Price Summary -->
     <LinearLayout
+        android:paddingTop="16dp"
         android:layout_marginStart="16dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp">
 
         <TextView
             android:id="@+id/tvPurchasePriceSummary"
             android:layout_width="80dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Selling Price Summary -->
     <LinearLayout
+        android:paddingTop="16dp"
         android:layout_marginStart="16dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp">
 
         <TextView
             android:id="@+id/tvSellingPriceSummary"
             android:layout_width="80dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ImageButton
+        android:paddingTop="16dp"
         android:id="@+id/btnDeleteProduct"
         android:background="?android:selectableItemBackground"
-        android:src="@drawable/ic_delete"
+        android:src="@drawable/ic_clear"
         android:layout_marginLeft="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
