--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,10 @@
         android:title="@string/add_manufacturer"
         android:icon="@drawable/ic_add" />
     <item
+        android:id="@+id/close_invoice"
+        android:title="@string/close_invoice"
+        android:icon="@drawable/ic_add" />
+    <item
         android:id="@+id/show_summary"
         android:title="@string/summary"
         android:icon="@drawable/ic_add" />
