--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/actionNotification"
-        android:title="@string/tab_item_history"
+        android:id="@+id/action_archive"
+        android:title="@string/archive"
         android:orderInCategory="1"
         android:icon="@drawable/ic_view_list"/>
 </menu>
