--- a/app/src/main/res/layout/card_archive.xml
+++ b/app/src/main/res/layout/card_archive.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
+    android:layout_marginRight="16dp"
     android:layout_marginBottom="8dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     cardView:cardCornerRadius="4dp"
-    cardView:cardElevation="8dp">
+    cardView:cardElevation="8dp"
+    android:layout_marginEnd="16dp">
 
     <LinearLayout
         android:layout_margin="8dp"
