--- a/app/src/main/res/layout/fragment_closed_invoice_item.xml
+++ b/app/src/main/res/layout/fragment_closed_invoice_item.xml
@@ -14,9 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtName"
-            android:inputType="text"
             android:layout_width="256dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -29,9 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp">
 
-        <EditText
+        <TextView
             android:id="@+id/edtWeightOnStore"
-            android:inputType="number"
             android:layout_width="80dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -42,9 +40,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtWeightOnFridge"
-            android:inputType="number"
             android:layout_width="80dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -55,9 +52,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtWeightOnStorage"
-            android:inputType="number"
             android:layout_width="80dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -68,9 +64,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtWeight4"
-            android:inputType="number"
             android:layout_width="80dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -81,26 +76,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtWeight5"
-            android:inputType="number"
             android:layout_width="80dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <!-- Purchase Price -->
     <LinearLayout
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="64dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="64dp">
 
-        <EditText
+        <TextView
             android:id="@+id/edtPurchasePrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Selling Price -->
@@ -109,33 +103,30 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <EditText
+        <TextView
             android:id="@+id/edtSellingPrice"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Purchase Price Summary -->
     <LinearLayout
-        android:paddingTop="11dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="32dp">
+        android:layout_marginLeft="16dp">
 
         <TextView
             android:id="@+id/tvPurchasePriceSummary"
-            android:layout_width="120dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Selling Price Summary -->
     <LinearLayout
-        android:paddingTop="11dp"
         android:layout_marginStart="16dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
@@ -144,19 +135,9 @@
 
         <TextView
             android:id="@+id/tvSellingPriceSummary"
-            android:layout_width="120dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
-
-    <ImageButton
-        android:paddingTop="16dp"
-        android:id="@+id/btnDeleteProduct"
-        android:background="?android:selectableItemBackground"
-        android:src="@drawable/ic_clear"
-        android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
