--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,16 @@
                 android:background="?attr/colorPrimary"
                 app:titleTextColor="@android:color/white"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >
+
+
+                    <AutoCompleteTextView
+                        android:id="@+id/tvFilter"
+                        android:completionThreshold="2"
+                        android:completionHint="@string/search"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content" />
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
 
