add excel reports and small UI fixes

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/add_manufacturer"
@@ -14,4 +13,9 @@
         android:id="@+id/show_summary"
         android:title="@string/summary"
         android:icon="@drawable/ic_add" />
+    <item
+        android:id="@+id/excel_export"
+        android:title="@string/export_to_excel"
+        android:icon="@drawable/ic_add" />
+
 </menu>
