--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,12 +29,28 @@
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >
 
 
-                    <AutoCompleteTextView
-                        android:id="@+id/tvFilter"
-                        android:completionThreshold="2"
-                        android:completionHint="@string/search"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content" />
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_weight="2"
+                            android:text="@string/app_name"
+                            android:textSize="24sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                        <AutoCompleteTextView
+                            android:layout_weight="1"
+                            android:id="@+id/tvFilter"
+                            android:completionThreshold="2"
+                            android:completionHint="@string/search"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content" />
+
+                    </LinearLayout>
+
+
             </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.AppBarLayout>
