--- a/app/src/main/res/layout/card_archive.xml
+++ b/app/src/main/res/layout/card_archive.xml
@@ -32,14 +32,16 @@
             android:layout_height="wrap_content">
 
             <Button
+                android:layout_weight="1"
                 android:id="@+id/btnArchiveDelete"
-                android:text="Delete"
+                android:text="@string/delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <Button
+                android:layout_weight="1"
                 android:id="@+id/btnArchiveOpen"
-                android:text="Open"
+                android:text="@string/open"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
