--- a/app/src/main/res/layout/fragment_main_footer.xml
+++ b/app/src/main/res/layout/fragment_main_footer.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -16,13 +14,13 @@
 
     <TextView
         android:layout_marginLeft="16dp"
-        android:id="@+id/mainFooterPurchaseSummary"
+        android:id="@+id/mainFooterSellingSummary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:layout_marginLeft="16dp"
-        android:id="@+id/mainFooterSellingSummary"
+        android:id="@+id/mainFooterPurchaseSummary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
