--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -25,6 +26,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:titleTextColor="@android:color/white"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" >
 
@@ -46,6 +48,7 @@
                             android:completionThreshold="2"
                             android:completionHint="@string/search"
                             android:layout_width="200dp"
+                            android:focusableInTouchMode="true"
                             android:layout_height="wrap_content" />
 
                     </LinearLayout>
