--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,8 @@
 
                     <LinearLayout
                         android:orientation="horizontal"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -48,7 +50,6 @@
                             android:completionThreshold="2"
                             android:completionHint="@string/search"
                             android:layout_width="200dp"
-                            android:focusableInTouchMode="true"
                             android:layout_height="wrap_content" />
 
                     </LinearLayout>
