--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -190,13 +190,13 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <ImageButton
+    <!--<ImageButton
         android:paddingTop="16dp"
         android:id="@+id/btnDeleteProduct"
         android:background="?android:selectableItemBackground"
         android:src="@drawable/ic_clear"
         android:layout_marginLeft="16dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
 </LinearLayout>
