--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <AutoCompleteTextView
+                            android:visibility="gone"
                             android:layout_weight="1"
                             android:id="@+id/tvFilter"
                             android:completionThreshold="2"
