--- a/app/src/main/res/layout/dialog_set_weight.xml
+++ b/app/src/main/res/layout/dialog_set_weight.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_margin="16dp"
         android:orientation="horizontal"
@@ -26,11 +25,13 @@
     </LinearLayout>
 
     <EditText
-        android:layout_margin="16dp"
         android:id="@+id/edtNewWeight"
-        android:inputType="numberDecimal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:inputType="numberDecimal"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -39,11 +40,13 @@
 
         <!-- Minus -->
         <Button
-            android:layout_weight="1"
             android:id="@+id/btnWeightMinus"
-            android:text="-"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="-"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
         <!-- Reset -->
         <Button
@@ -55,11 +58,12 @@
 
         <!-- Plus -->
         <Button
-            android:layout_weight="1"
             android:id="@+id/btnWeightPlus"
-            android:text="+"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="+"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
