--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,14 +44,31 @@
                             android:textSize="24sp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
-                        <AutoCompleteTextView
-                            android:visibility="gone"
+                        
+                        <FrameLayout
                             android:layout_weight="1"
-                            android:id="@+id/tvFilter"
-                            android:completionThreshold="2"
-                            android:completionHint="@string/search"
                             android:layout_width="200dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp" >
+
+                            <AutoCompleteTextView
+                                android:visibility="gone"
+                                android:id="@+id/tvFilter"
+                                android:completionThreshold="2"
+                                android:completionHint="@string/search"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                            <Button
+                                android:id="@+id/btnClear"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_gravity="end|center_vertical"
+                                android:layout_marginEnd="10dp"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/ic_clear_white"
+                                android:visibility="gone" />
+                        </FrameLayout>
 
                     </LinearLayout>
 
