--- a/app/src/main/res/layout/fragment_main_header.xml
+++ b/app/src/main/res/layout/fragment_main_header.xml
@@ -1,41 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_marginTop="16dp"
     android:layout_marginLeft="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
-    <TextView
-        android:id="@+id/tvHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageButton
-        android:id="@+id/btnAddProduct"
-        android:background="?android:selectableItemBackground"
-        android:src="@drawable/ic_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="64dp" />
+        <TextView
+            android:id="@+id/tvHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-    <ImageButton
-        android:id="@+id/btnEditName"
-        android:background="?android:selectableItemBackground"
-        android:src="@drawable/ic_edit"
-        android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/btnAddProduct"
+            android:background="?android:selectableItemBackground"
+            android:src="@drawable/ic_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="64dp" />
 
-    <ImageButton
-        android:id="@+id/btnDelete"
-        android:background="?android:selectableItemBackground"
-        android:src="@drawable/ic_delete"
-        android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/btnEditName"
+            android:background="?android:selectableItemBackground"
+            android:src="@drawable/ic_edit"
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ImageButton
+            android:id="@+id/btnDelete"
+            android:background="?android:selectableItemBackground"
+            android:src="@drawable/ic_delete"
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/name"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:text="@string/weight"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="@string/sell_price"/>
+
+        <TextView
+            android:layout_marginLeft="64dp"
+            android:layout_marginStart="32dp"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:text="@string/purch_price"
+             />
+
+    </LinearLayout>
+
 </LinearLayout>
