--- a/app/src/main/res/layout/dialog_summary.xml
+++ b/app/src/main/res/layout/dialog_summary.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
@@ -19,16 +19,17 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_margin="16dp"
-            android:layout_marginLeft="16dp"
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp">
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="32dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="200dp"
@@ -48,12 +49,13 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_margin="16dp"
             android:layout_marginLeft="16dp"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp">
+            android:layout_marginStart="32dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="200dp"
