--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -4,12 +4,17 @@
         android:id="@+id/action_home"
         android:title="@string/main"
         android:orderInCategory="1"
-        android:icon="@drawable/ic_home"/>
+        android:icon="@drawable/ic_tab_black"/>
+    <item
+        android:id="@+id/action_all_list"
+        android:title="@string/all_list"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_format_list_bulleted_black"/>
     <item
         android:id="@+id/action_archive"
         android:title="@string/archive"
         android:orderInCategory="1"
-        android:icon="@drawable/ic_view_list"/>
+        android:icon="@drawable/ic_storage_black"/>
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings"
